--- a/_includes/embed/iframe.html
+++ b/_includes/embed/iframe.html
@@ -1,6 +1,6 @@
 {%- comment -%} Convert src → full URL {%- endcomment -%}
 {%- capture src_final -%}
-{%- include url_from_src.html src=include.src mw_width=include.mw_width media_subpath=page.media_subpath -%}
+{%- include media-url.html src=include.src mw_width=include.mw_width subpath=page.media_subpath -%}
 {%- endcapture -%}
 {%- assign src_final = src_final | strip -%}
 
