--- a/_includes/post_list_item.html
+++ b/_includes/post_list_item.html
@@ -9,13 +9,13 @@
     {% assign raw_src = post.image.path | default: post.image %}
 
     {%- capture src -%}
-    {%- include url_from_src.html src=raw_src media_subpath=post.media_subpath mw_width=360 -%}
+    {%- include media-url.html src=raw_src media_subpath=post.media_subpath mw_width=360 -%}
     {%- endcapture -%}
     {%- assign src = src | strip -%}
 
     {%- assign commons_thumb_prefix = "https://upload.wikimedia.org/wikipedia/commons/thumb" -%}
 
-    {%- assign do_resize = true -%}
+    {%- assign do_resize = false -%}
 
     {%- if post.image.resize == false -%}
     {%- assign do_resize = false -%}
