--- a/_layouts/juncture.html
+++ b/_layouts/juncture.html
@@ -60,13 +60,13 @@ script_includes:
       {%- capture lqip -%}lqip="{{ page.image.lqip }}"{%- endcapture -%}
       {% endif %}
 
-      <!-- src: {{ src }} -->
-      <div class="mt-3 mb-3">
-        <img {{ src }} {{ class }} {{ alt }} w="1200" h="630" {{ lqip }}>
-        {%- if page.image.alt -%}
-        <figcaption class="text-center pt-2 pb-2">{{ page.image.alt }}</figcaption>
-        {%- endif -%}
-      </div>
+      <figure class="post-hero mt-3 mb-3">
+        <div class="post-hero-media">
+          <img {{ src }} {{ class }} {{ alt }} w="1200" h="630" {{ lqip }}>
+        </div>
+        <figcaption class="text-center pt-2 pb-2">Monument Valley</figcaption>
+      </figure>
+
       {% endif %}
 
       <div class="d-flex justify-content-between">
