--- a/_includes/post_index_item.html
+++ b/_includes/post_index_item.html
@@ -21,6 +21,40 @@ Enclosing container class controls layout:
         {% endunless %}
     {% endif %}
 
+    {%- assign src = src | absolute_url -%}
+    {%- assign first_char = src | slice: 0, 1 -%}
+    {%- if first_char == "/" -%}
+        {%- assign src = site.url | append: src -%}
+    {%- endif -%}
+
+    {%- comment -%} Cloudinary width-only resizing (production only, cloud name required) {%- endcomment -%}
+    {%- assign is_dev = true -%}
+    {%- if jekyll.environment == "production" -%}
+      {%- assign is_dev = false -%}
+    {%- endif -%}
+    {%- assign cl_cloud = site.cloudinary_cloud_name | default: '' -%}
+    {%- assign cl_enable = include.cl_enable | default: 'true' -%}
+
+<!-- is_dev={{is_dev}} cl_cloud={{cl_cloud}} cl_enable={{cl_enable}} -->
+    {%- if is_dev == false and cl_cloud != '' and cl_enable == 'true' -%}
+    <!-- here -->
+      {%- if src contains '://' -%}
+        {%- unless src contains 'res.cloudinary.com' and src contains '/image/fetch/' -%}
+          {%- assign cl_width = include.cl_width | default: include.mw_width | default: 1200 -%}
+          {%- assign transform = 'w_' | append: cl_width | append: ',c_limit' -%}
+          {%- assign src_safe = src | url_encode -%}
+          {%- assign src =
+            'https://res.cloudinary.com/'
+            | append: cl_cloud
+            | append: '/image/fetch/'
+            | append: transform
+            | append: '/'
+            | append: src_safe
+          -%}
+        {%- endunless -%}
+      {%- endif -%}
+    {%- endif -%}
+
     {%- if post.image.lqip -%}
         {% assign lqip = post.image.lqip %}
         {% if post.media_subpath %}
