--- a/_includes/embed/image.html
+++ b/_includes/embed/image.html
@@ -4,15 +4,19 @@
   {%- endcapture -%}
   {%- assign src_final = src_final | strip -%}
 
-  {%- assign first_char = src_final | slice: 0, 1 -%}
+  <!-- src_final={{src_final}} -->
+  
+  {% assign cloudinary_marker = '/image/fetch/' %}
+  {% if src_final contains cloudinary_marker %}
+    {% assign _tmp = src_final | split: cloudinary_marker | last %}
+    {% assign original_encoded = _tmp | split: '/' | last %}
+  {% else %}
+    {% assign original_encoded = src_final %}
+  {% endif %}
+  <!-- original_encoded={{original_encoded}} -->
+  {%- assign src_final = original_encoded -%}
 
-  {%- if first_char == "/" -%}
-    {%- assign src_full = site.url | append: src_final -%}
-  {%- else -%}
-    {%- assign src_full = src_final -%}
-  {%- endif -%}
-
-  {%- assign qs = "src=" | append: src_full -%}
+  {%- assign qs = "src=" | append: src_final -%}
 {%- endif -%}
 
 {%- if include.manifest -%}
