--- a/_includes/embed/map.html
+++ b/_includes/embed/map.html
@@ -59,7 +59,7 @@
 
 {%- comment -%} Convert src → full URL {%- endcomment -%}
 {%- capture src_final -%}
-{%- include media-url.html src=include.src mw_width=include.mw_width subpath=page.media_subpath -%}
+{%- include media-url.html src=include.src width=include.width subpath=page.media_subpath -%}
 {%- endcapture -%}
 {%- assign src_final = src_final | strip -%}
 
