--- a/_includes/post_list_item.html
+++ b/_includes/post_list_item.html
@@ -9,7 +9,7 @@
     {% assign raw_src = post.image.path | default: post.image %}
 
     {%- capture src -%}
-    {%- include media-url.html src=raw_src media_subpath=post.media_subpath mw_width=360 -%}
+    {%- include media-url.html src=raw_src media_subpath=post.media_subpath width=360 -%}
     {%- endcapture -%}
     {%- assign src = src | strip -%}
 
